[tool.poetry]
name = "speed-trap"
version = "0.1.0"
description = ""
authors = ["Brett LaBombarda <bplabombarda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
speedtest-cli = "^2.1.2"
influxdb-client = "^1.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
